* 2014-10-21 - thorben.betten@open-xchange.com

 - Fix for bug 35023: Orderly deal with absent user permission bits

* 2014-10-16 - thorben.betten@open-xchange.com

 - Fix for bug 34921: Do not generally apply HTML sanitizing to XML content

* 2014-10-06 - thorben.betten@open-xchange.com

 - Fix for bug 34706: Use timeout-aware operations to distribute either change of local IP address, client identifier or hash string through
                      cluster to prevent the system from increasing number of stalled threads
 - Fix for bug 34765: Use secure value insertion through PreparedStatement

* 2014-10-06 - ioannis.chouklis@open-xchange.com

 - Fix for bug 34704: Parse the escaped double quotes correctly and convert all octet string literals to their ASCII/Unicode representations

* 2014-09-29 - thorben.betten@open-xchange.com

 - Fix for bug 34668: Special handling for Windows IE 11 Browser in session management

* 2014-09-26 - thorben.betten@open-xchange.com

 - Fix for bug 34465: Fixed update for POP3 mail accounts

* 2014-09-18 - thorben.betten@open-xchange.com

 - Fix for bug 34071: Properly build up namespace section in IMAP folder tree

* 2014-09-11 - jan.bauerdick@open-xchange.com

 - Fix for bug 34281: Facebook made access to permissions more restrictive since April 30th 2014.
                      Removed these permissions, because they were unused.

* 2014-09-09 - ioannis.chouklis@open-xchange.com

 - Fix for bug 34322: Consider the 'OK' keyword in Sieve comments

* 2014-09-11 - martin.herfurth@open-xchange.com

 - Fix for bug 34361: Case insensitive check for organizer.

* 2014-09-10 - tobias.friedrich@open-xchange.com

 - Fix for bug 34355: Use secured SAXBuilder in the replay WebDAV request

* 2014-09-02 - thorben.betten@open-xchange.com

 - Fix for bug 33967: Avoid 102 Processing interim responses for requests executed by USM component

* 2014-09-01 - jan.bauerdick@open-xchange.com
