@@ -1,6 +1,8 @@
 * 2014-10-21 - thorben.betten@open-xchange.com
 
  - Fix for bug 35023: Orderly deal with absent user permission bits
+ - Fix for bug 34706: Do not consult session storage in case session look-up is performed by alternative identifier and
+                      ensure a timed-out (but still pending) session storage query get orderly interrupted to relieve pressure on Hazelcast
 
 * 2014-10-16 - thorben.betten@open-xchange.com
 
